Fixed overlapping issue with active menu bar links in GCWU theme. Cleaned up French text in README.md and the French home page.

--- a/src/theme-gcwu-fegc/sass/includes/_default-desktop-screen-images.scss
+++ b/src/theme-gcwu-fegc/sass/includes/_default-desktop-screen-images.scss
@@ -97,6 +97,7 @@
 				&.mb-has-sm {
 					background-color: #CCC;
 					color: #000;
+					border-top: 1px solid #87AEC9;
 				}
 			}
 		}
