--- a/src/theme-gcwu-fegc/sass/includes/_default-screen-ie.scss
+++ b/src/theme-gcwu-fegc/sass/includes/_default-screen-ie.scss
@@ -2,6 +2,12 @@
  * Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
  * wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt
  */
+.ie7, .ie8 {
+	.wet-boew-menubar {
+		margin-top: 0;
+	}
+}
+
 .ie7 {
 	#wb-core {
 		margin-bottom: -20px;
