--- a/src/theme-gcwu-fegc/sass/includes/_default-screen-images-ie.scss
+++ b/src/theme-gcwu-fegc/sass/includes/_default-screen-images-ie.scss
@@ -22,6 +22,13 @@
 				@include filter-gradient(#CCC, #EEE);
 			}
 		}
+		a {
+			&:hover, &:link, &:visited {
+				&.mb-has-sm {
+					margin-bottom: -1px;
+				}
+			}
+		}
 	}
 	%gcwu-default-screen-images-ie8-deco-background {
 		background: url(../images/content-deco-ie.gif) center top repeat-y;
